[msvc] prevent Intellisense from hogging the CPU with VS2010
* VS2010 insists on repeatedly parsing the embedded.h file
* rename this file pre and post build to avoid that

--- a/libwdi/.msvc/libwdi_static_2010.vcxproj
+++ b/libwdi/.msvc/libwdi_static_2010.vcxproj
@@ -76,6 +76,7 @@
     <PreBuildEvent>
       <Message>Embedding binary resources</Message>
       <Command>cd $(ProjectDir)\..
+if exist embedded.no_is ren embedded.no_is embedded.h
 embedder embedded.h</Command>
     </PreBuildEvent>
     <ClCompile>
@@ -93,11 +94,19 @@ embedder embedded.h</Command>
     <Lib>
       <OutputFile>$(OutDir)libwdi.lib</OutputFile>
     </Lib>
+    <PostBuildEvent>
+      <Command>cd $(ProjectDir)\..
+ren embedded.h embedded.no_is</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>rename embedded.h, to avoid Intellisense hogging CPU time parsing it</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <PreBuildEvent>
       <Message>Embedding binary resources</Message>
       <Command>cd $(ProjectDir)\..
+if exist embedded.no_is ren embedded.no_is embedded.h
 embedder embedded.h</Command>
     </PreBuildEvent>
     <ClCompile>
@@ -114,11 +123,19 @@ embedder embedded.h</Command>
     <Lib>
       <OutputFile>$(OutDir)libwdi.lib</OutputFile>
     </Lib>
+    <PostBuildEvent>
+      <Command>cd $(ProjectDir)\..
+ren embedded.h embedded.no_is</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>rename embedded.h, to avoid Intellisense hogging CPU time parsing it</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <PreBuildEvent>
       <Message>Embedding binary resources</Message>
       <Command>cd $(ProjectDir)\..
+if exist embedded.no_is ren embedded.no_is embedded.h
 embedder embedded.h</Command>
     </PreBuildEvent>
     <ClCompile>
@@ -134,11 +151,19 @@ embedder embedded.h</Command>
     <Lib>
       <OutputFile>$(OutDir)libwdi.lib</OutputFile>
     </Lib>
+    <PostBuildEvent>
+      <Command>cd $(ProjectDir)\..
+ren embedded.h embedded.no_is</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>rename embedded.h, to avoid Intellisense hogging CPU time parsing it</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <PreBuildEvent>
       <Message>Embedding binary resources</Message>
       <Command>cd $(ProjectDir)\..
+if exist embedded.no_is ren embedded.no_is embedded.h
 embedder embedded.h</Command>
     </PreBuildEvent>
     <ClCompile>
@@ -154,6 +179,13 @@ embedder embedded.h</Command>
     <Lib>
       <OutputFile>$(OutDir)libwdi.lib</OutputFile>
     </Lib>
+    <PostBuildEvent>
+      <Command>cd $(ProjectDir)\..
+ren embedded.h embedded.no_is</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>rename embedded.h, to avoid Intellisense hogging CPU time parsing it</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\libwdi.c" />
