[zadig] added fixed GUID provision through preset
* also updated URLs and copyright

--- a/examples/zadig_preset.cfg
+++ b/examples/zadig_preset.cfg
@@ -4,3 +4,5 @@
   VID = 0xABCD
   PID = 0x1234
   MI = 0x01
+# You can also force a specific Device Interface GUID as follows
+# GUID = "{11111111-2222-3333-4444-555555555555}"
