self signing of .cat files - part 4 (cleanup)
* reverted destructive modification of embedded cat.in
* fixed libusbK cat file list for x64 only
* added friendly name, URL and CPS/Issuer Statement
* overall cleanup

--- a/libwdi/libusbk.cat.in
+++ b/libwdi/libusbk.cat.in
@@ -4,5 +4,8 @@
 WdfCoInstaller01009.dll
 libusbk.sys
 libusbk.dll
+libusbk_x86.dll
 libusb0.dll
+libusb0_x86.dll
 libusb-1.0.dll
+libusb-1.0_x86.dll
