[license] LGPL v2.1 -> LGPL v3

--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -191,8 +191,8 @@ BEGIN
             VALUE "FileDescription", "Zadig Application"
             VALUE "FileVersion", "1, 1, 0, 134"
             VALUE "InternalName", "zadig"
-            VALUE "LegalCopyright", "See individual source files, GNU LGPL v2.1 or later."
-            VALUE "LegalTrademarks", "http://www.gnu.org/licenses/lgpl-2.1.html"
+            VALUE "LegalCopyright", "GNU LGPL v3 or later"
+            VALUE "LegalTrademarks", "http://www.gnu.org/copyleft/lesser.html"
             VALUE "OriginalFilename", "zadig.exe"
             VALUE "ProductName", "zadig"
             VALUE "ProductVersion", "1, 1, 0, 134"
