[msvc] fixed VS2008 project files
* The pre-build steps didn't work. Change them to match the 2010 steps.
* Fixed wrong macro names used in embedder project file

--- a/libwdi/.msvc/embedder_2008.vcproj
+++ b/libwdi/.msvc/embedder_2008.vcproj
@@ -19,7 +19,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="$(InputDir)\..\"
-			IntermediateDirectory="$(SolutionDir)$(Platform)\$(Configuration)\helper\$(ProjectName)"
+			IntermediateDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\helper\$(ProjectName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			BuildLogFile="$(IntDir)\$(ProjectName).htm"
@@ -90,7 +90,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="$(InputDir)\..\"
-			IntermediateDirectory="$(SolutionDir)$(Platform)\$(Configuration)\helper\$(ProjectName)"
+			IntermediateDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\helper\$(ProjectName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
