--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -2,9 +2,12 @@ INCLUDES = -I$(top_srcdir)
 
 noinst_PROGRAMS = zadic zadig inf-wizard wdi-simple
 
+pkg_v_rc = $(pkg_v_rc_$(V))
+pkg_v_rc_ = $(pkg_v_rc_$(AM_DEFAULT_VERBOSITY))
+pkg_v_rc_0 = @echo "  RC     $@";
+
 zadic_rc.o: zadic.rc
-	@echo "  WINRES $<"
-	@$(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --silent --mode=compile $(RC) $(ARCH_RCFLAGS) -static -i $< -o $@
+	$(pkg_v_rc)$(LIBTOOL) $(AM_V_lt) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --tag=RC --mode=compile $(RC) $(ARCH_RCFLAGS) -i $< -o $@
 
 zadic_SOURCES = zadic.c
 zadic_CFLAGS = -I../libwdi $(ARCH_CFLAGS) $(NO_CYGWIN) $(AM_CFLAGS)
@@ -13,8 +16,7 @@ zadic_LDFLAGS = $(NO_CYGWIN) $(AM_LDFLAGS) -static
 zadic_LDADD = zadic_rc.o -L../libwdi/.libs -lwdi
 
 zadig_rc.o: zadig.rc resource.h
-	@echo "  WINRES $<"
-	@$(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --silent --mode=compile $(RC) $(ARCH_RCFLAGS) -static -i $< -o $@
+	$(pkg_v_rc)$(LIBTOOL) $(AM_V_lt) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --tag=RC --mode=compile $(RC) $(ARCH_RCFLAGS) -i $< -o $@
 
 zadig_SOURCES = zadig.c zadig_stdlg.c profile.c
 zadig_CFLAGS = -I../libwdi $(ARCH_CFLAGS) $(NO_CYGWIN) $(AM_CFLAGS)
@@ -22,8 +24,7 @@ zadig_LDFLAGS = -mwindows $(NO_CYGWIN) $(AM_LDFLAGS) -static
 zadig_LDADD = zadig_rc.o -L../libwdi/.libs -lwdi
 
 inf_wizard_rc.o: inf_wizard_rc.rc
-	@echo "  WINRES $<"
-	@$(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --silent --mode=compile $(RC) $(ARCH_RCFLAGS) -static -i $< -o $@
+	$(pkg_v_rc)$(LIBTOOL) $(AM_V_lt) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --tag=RC --mode=compile $(RC) $(ARCH_RCFLAGS) -i $< -o $@
 
 inf_wizard_SOURCES = inf_wizard.c
 inf_wizard_CFLAGS = -I../libwdi $(ARCH_CFLAGS) $(NO_CYGWIN) $(AM_CFLAGS)
@@ -31,8 +32,7 @@ inf_wizard_LDFLAGS = -mwindows $(NO_CYGWIN) $(AM_LDFLAGS) -static
 inf_wizard_LDADD = inf_wizard_rc.o -L../libwdi/.libs -lwdi -lcomctl32
 
 wdi-simple_rc.o: wdi-simple.rc
-	@echo "  WINRES $<"
-	@$(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --silent --mode=compile $(RC) $(ARCH_RCFLAGS) -static -i $< -o $@
+	$(pkg_v_rc)$(LIBTOOL) $(AM_V_lt) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --tag=RC --mode=compile $(RC) $(ARCH_RCFLAGS) -i $< -o $@
 
 wdi_simple_SOURCES = wdi-simple.c
 wdi_simple_CFLAGS = -I../libwdi $(ARCH_CFLAGS) $(NO_CYGWIN) $(AM_CFLAGS)
