[zadig] use split button for installation

--- a/examples/.msvc/zadig_2008.vcproj
+++ b/examples/.msvc/zadig_2008.vcproj
@@ -361,6 +361,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\split.ico"
+				>
+			</File>			
+			<File
 				RelativePath="..\zadig.ico"
 				>
 			</File>
