--- a/examples/.msvc/zadig_2010.vcxproj.filters
+++ b/examples/.msvc/zadig_2010.vcxproj.filters
@@ -43,6 +43,9 @@
     <None Include="..\zadig.ico">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="..\split.ico">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\zadig.rc">
