[inf] rename libusb-win32 -> libusb0

--- a/libwdi/.msvc/libwdi_dll_2008.vcproj
+++ b/libwdi/.msvc/libwdi_dll_2008.vcproj
@@ -377,7 +377,7 @@ embedder embedded.h"
 			Name="Resource Files"
 			>
 			<File
-				RelativePath="..\libusb-win32.inf.in"
+				RelativePath="..\libusb0.inf.in"
 				>
 			</File>
 			<File
