--- a/libwdi/.msvc/libwdi_dll_2010.vcxproj.filters
+++ b/libwdi/.msvc/libwdi_dll_2010.vcxproj.filters
@@ -63,7 +63,7 @@
     <None Include="..\libwdi.def">
       <Filter>Source Files</Filter>
     </None>
-    <None Include="..\libusb-win32.inf.in">
+    <None Include="..\libusb0.inf.in">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="..\libusbk.inf.in">
