--- a/libwdi/.msvc/libwdi_static_2008.vcproj
+++ b/libwdi/.msvc/libwdi_static_2008.vcproj
@@ -346,7 +346,7 @@
 			Name="Resource Files"
 			>
 			<File
-				RelativePath="..\libusb-win32.inf.in"
+				RelativePath="..\libusb0.inf.in"
 				>
 			</File>
 			<File
