--- a/libwdi/.msvc/libwdi_static_2010.vcxproj.filters
+++ b/libwdi/.msvc/libwdi_static_2010.vcxproj.filters
@@ -60,7 +60,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\libusb-win32.inf.in">
+    <None Include="..\libusb0.inf.in">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="..\libusbk.inf.in">
