[zadig] major UI redesign

--- a/examples/.msvc/zadig_2008.vcproj
+++ b/examples/.msvc/zadig_2008.vcproj
@@ -363,7 +363,19 @@
 			<File
 				RelativePath="..\split.ico"
 				>
-			</File>			
+			</File>
+			<File
+				RelativePath="..\tick_nok.ico"
+				>
+			</File>
+			<File
+				RelativePath="..\tick_ok.ico"
+				>
+			</File>
+			<File
+				RelativePath="..\wdi.bmp"
+				>
+			</File>
 			<File
 				RelativePath="..\zadig.ico"
 				>
