--- a/examples/.msvc/zadig_2010.vcxproj
+++ b/examples/.msvc/zadig_2010.vcxproj
@@ -172,6 +172,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\split.ico" />
+    <None Include="..\tick_nok.ico" />
+    <None Include="..\tick_ok.ico" />
+    <None Include="..\wdi.bmp" />
     <None Include="..\zadig.ico" />
   </ItemGroup>
   <ItemGroup>
