--- a/examples/.msvc/zadig_2010.vcxproj.filters
+++ b/examples/.msvc/zadig_2010.vcxproj.filters
@@ -46,6 +46,15 @@
     <None Include="..\split.ico">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="..\wdi.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\tick_ok.ico">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\tick_nok.ico">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\zadig.rc">
