--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -127,32 +127,32 @@ MENU IDR_MENU1
 FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
     GROUPBOX        "",IDC_STATIC,5,2,368,35
-    PUSHBUTTON      "Install Driver",IDC_INSTALLXP,141,66,95,29,BS_MULTILINE | NOT WS_VISIBLE
-    CONTROL         "Install Driver",IDC_INSTALLVISTA,"Button",BS_SPLITBUTTON | BS_MULTILINE | WS_TABSTOP,141,66,95,29
+    PUSHBUTTON      "Install Driver",IDC_INSTALLXP,139,66,94,29,BS_MULTILINE | NOT WS_VISIBLE
+    CONTROL         "Install Driver",IDC_INSTALLVISTA,"Button",BS_SPLITBUTTON | BS_MULTILINE | WS_TABSTOP,139,66,94,29
     COMBOBOX        IDC_DEVICELIST,11,15,332,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
     EDITTEXT        IDC_DEVICEEDIT,11,15,332,13,NOT WS_VISIBLE | NOT WS_TABSTOP
     CONTROL         "Edit",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,345,13,25,18
     GROUPBOX        "",IDC_STATIC,5,32,251,72
     LTEXT           "Driver",IDC_STATIC_DRIVER,13,46,21,14
     EDITTEXT        IDC_DRIVER,39,44,78,14,ES_READONLY | NOT WS_TABSTOP
-    LTEXT           "USB ID",IDC_VIDPID,13,65,23,10
+    LTEXT           "USB ID",IDC_VIDPID,13,65,23,10,SS_NOTIFY
     EDITTEXT        IDC_VID,39,63,29,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
     EDITTEXT        IDC_PID,69,63,29,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
     EDITTEXT        IDC_MI,99,63,17,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
-    LTEXT           "WCID",IDC_STATIC_WCID,13,84,21,9
-    EDITTEXT        IDC_WCID_TICK,39,82,14,14,ES_READONLY | NOT WS_TABSTOP
+    LTEXT           "WCID",IDC_STATIC_WCID,13,84,21,9,SS_NOTIFY
+    EDITTEXT        IDC_WCID_BOX,39,82,14,14,ES_READONLY | NOT WS_TABSTOP
     EDITTEXT        IDC_WCID,54,82,44,14,ES_READONLY | NOT WS_VISIBLE | NOT WS_TABSTOP,WS_EX_TRANSPARENT
-    LTEXT           "ð",IDC_RARR,123,44,13,15
-    EDITTEXT        IDC_TARGET,141,44,94,14,ES_READONLY | NOT WS_TABSTOP
-    CONTROL         "",IDC_TARGETSPIN,"msctls_updown32",UDS_ARROWKEYS,236,44,11,14,WS_EX_TRANSPARENT
+    LTEXT           "ð",IDC_RARR,122,44,13,15
+    EDITTEXT        IDC_TARGET,139,44,97,14,ES_READONLY | NOT WS_TABSTOP
+    CONTROL         "",IDC_TARGETSPIN,"msctls_updown32",UDS_ARROWKEYS,237,44,11,14,WS_EX_TRANSPARENT
     GROUPBOX        "",IDC_STATIC,256,32,117,72
     CONTROL         106,IDC_THIS_SPACE_FOR_RENT,"Static",SS_BITMAP | SS_CENTERIMAGE,273,42,80,53
-    PUSHBUTTON      "...",IDC_BROWSE,236,66,12,29
+    PUSHBUTTON      "",IDC_BROWSE,233,66,15,29
     EDITTEXT        IDC_INFO,11,109,357,162,ES_MULTILINE | ES_READONLY | WS_VSCROLL
     GROUPBOX        "",IDC_GROUPLOG,5,99,368,199
     PUSHBUTTON      "Clear Log",IDC_CLEAR,136,276,50,14
     PUSHBUTTON      "Save Log",IDC_SAVE,191,276,50,14
-    ICON            "",IDC_TICK,41,83,20,20,SS_REALSIZEIMAGE
+    ICON            "",IDC_WCID_ICON,41,83,20,20,SS_NOTIFY | SS_REALSIZEIMAGE
     CONTROL         "<a>?</a>",IDC_WCID_HELP,"SysLink",WS_TABSTOP,33,81,6,14
 END
 
