--- a/libwdi/Makefile.am
+++ b/libwdi/Makefile.am
@@ -17,8 +17,8 @@ if OPT_M32
 noinst_PROGRAMS += installer_x86
 noinst_EXES += installer_x86.exe
 installer_x86_SOURCES = installer.h installer.c
-installer_x86_CFLAGS = -m32 $(NO_CYGWIN) $(AM_CFLAGS)
-installer_x86_LDFLAGS = -m32 $(NO_CYGWIN) $(AM_LDFLAGS) -static
+installer_x86_CFLAGS = -m32 $(AM_CFLAGS)
+installer_x86_LDFLAGS = -m32 $(AM_LDFLAGS) -static
 installer_x86_LDADD = -lsetupapi -lnewdev -lole32
 endif
 
@@ -26,8 +26,8 @@ if OPT_M64
 noinst_PROGRAMS += installer_x64
 noinst_EXES += installer_x64.exe
 installer_x64_SOURCES = installer.h installer.c
-installer_x64_CFLAGS = -m64 -D_WIN64 $(NO_CYGWIN) $(AM_CFLAGS)
-installer_x64_LDFLAGS = -m64 $(NO_CYGWIN) $(AM_LDFLAGS) -static
+installer_x64_CFLAGS = -m64 -D_WIN64 $(AM_CFLAGS)
+installer_x64_LDFLAGS = -m64 $(AM_LDFLAGS) -static
 installer_x64_LDADD = -lsetupapi -lnewdev -lole32
 endif
 
@@ -47,8 +47,8 @@ EXTRA_DIST = $(LIB_SRC)
 libwdi_rc.lo: libwdi.rc
 	$(pkg_v_rc)$(LIBTOOL) $(AM_V_lt) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --tag=RC --mode=compile $(RC) $(ARCH_RCFLAGS) -i $< -o $@
 
-libwdi_la_CFLAGS = $(ARCH_CFLAGS) $(NO_CYGWIN) $(VISIBILITY_CFLAGS) $(AM_CFLAGS)
-libwdi_la_LDLAGS = $(NO_CYGWIN) $(AM_LDFLAGS)
+libwdi_la_CFLAGS = $(ARCH_CFLAGS) $(VISIBILITY_CFLAGS) $(AM_CFLAGS)
+libwdi_la_LDLAGS = $(AM_LDFLAGS)
 libwdi_la_LIBADD = libwdi_rc.lo -lsetupapi -lole32
 libwdi_la_SOURCES = $(LIB_SRC)
 
