[autotools] globally set _WIN32_IE to a decent version

--- a/configure.ac
+++ b/configure.ac
@@ -69,7 +69,7 @@ case $host in
 	AC_MSG_ERROR([unsupported development environment])
 esac
 
-AM_CFLAGS="${AM_CFLAGS} -DWINVER=0x500"
+AM_CFLAGS="${AM_CFLAGS} -DWINVER=0x500 -D_WIN32_IE=0x500"
 AM_LDFLAGS="${AM_LDFLAGS} -no-undefined -avoid-version"
 AM_CONDITIONAL([CREATE_IMPORT_LIB], [test "x$create_import_lib" = "xyes"])
 
