[zadig] add ability to report to USB ID Repository

--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -139,6 +139,7 @@ BEGIN
     EDITTEXT        IDC_VID,39,63,29,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
     EDITTEXT        IDC_PID,69,63,29,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
     EDITTEXT        IDC_MI,99,63,17,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
+    PUSHBUTTON      "",IDC_VID_REPORT,117,62,16,15,NOT WS_VISIBLE
     LTEXT           "WCID",IDC_STATIC_WCID,13,84,21,9,SS_NOTIFY
     EDITTEXT        IDC_WCID_BOX,39,82,14,14,ES_READONLY | NOT WS_TABSTOP
     EDITTEXT        IDC_WCID,54,82,44,14,ES_READONLY | NOT WS_VISIBLE | NOT WS_TABSTOP,WS_EX_TRANSPARENT
