[zadig] coloured arrows and other UI improvements

--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -120,42 +120,44 @@ END
 // Dialog
 //
 
-MAIN_DIALOG DIALOGEX 0, 0, 378, 318
+MAIN_DIALOG DIALOGEX 0, 0, 382, 318
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_MINIMIZEBOX | WS_VISIBLE | WS_CLIPSIBLINGS | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Zadig"
 MENU IDR_MENU1
 FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
-    GROUPBOX        "",IDC_STATIC,5,2,368,35
-    PUSHBUTTON      "Install Driver",IDC_INSTALLXP,159,66,94,29,BS_MULTILINE | NOT WS_VISIBLE
-    CONTROL         "Install Driver",IDC_INSTALLVISTA,"Button",BS_SPLITBUTTON | BS_MULTILINE | WS_TABSTOP,159,66,94,29
-    COMBOBOX        IDC_DEVICELIST,11,15,332,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_DEVICEEDIT,11,15,332,13,NOT WS_VISIBLE | NOT WS_TABSTOP
-    CONTROL         "Edit",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,345,13,25,18
-    GROUPBOX        "",IDC_STATIC,5,32,271,72
-    LTEXT           "Driver",IDC_STATIC_DRIVER,13,46,21,14
-    EDITTEXT        IDC_DRIVER,39,44,98,14,ES_READONLY | NOT WS_TABSTOP
-    LTEXT           "USB ID",IDC_VIDPID,13,65,23,10,SS_NOTIFY
-    EDITTEXT        IDC_VID,39,63,29,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
-    EDITTEXT        IDC_PID,69,63,29,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
-    EDITTEXT        IDC_MI,99,63,17,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
-    PUSHBUTTON      "",IDC_VID_REPORT,117,62,16,15,NOT WS_VISIBLE
-    LTEXT           "WCID",IDC_STATIC_WCID,13,84,21,9,SS_NOTIFY
-    EDITTEXT        IDC_WCID_BOX,39,82,14,14,ES_READONLY | NOT WS_TABSTOP
-    EDITTEXT        IDC_WCID,54,82,44,14,ES_READONLY | NOT WS_VISIBLE | NOT WS_TABSTOP,WS_EX_TRANSPARENT
-    LTEXT           "ð",IDC_RARR,142,44,13,15
-    EDITTEXT        IDC_TARGET,159,44,98,14,ES_READONLY | NOT WS_TABSTOP
-    CONTROL         "",IDC_TARGETSPIN,"msctls_updown32",UDS_ARROWKEYS,257,44,11,14,WS_EX_TRANSPARENT
-    GROUPBOX        "",IDC_STATIC,276,32,97,72
-    CONTROL         106,IDC_THIS_SPACE_FOR_RENT,"Static",SS_BITMAP | SS_CENTERIMAGE,280,36,89,66
-    PUSHBUTTON      "",IDC_BROWSE,253,66,15,29
-    EDITTEXT        IDC_INFO,11,109,357,162,ES_MULTILINE | ES_READONLY | WS_VSCROLL
-    GROUPBOX        "",IDC_GROUPLOG,5,99,368,199
-    PUSHBUTTON      "Clear Log",IDC_CLEAR,136,276,50,14
-    PUSHBUTTON      "Save Log",IDC_SAVE,191,276,50,14
-    ICON            "",IDC_WCID_ICON,41,83,20,20,SS_NOTIFY | SS_REALSIZEIMAGE
-    CONTROL         "<a>?</a>",IDC_WCID_HELP,"SysLink",WS_TABSTOP,33,81,6,14
+    GROUPBOX        "",IDC_STATIC,6,2,369,35
+    PUSHBUTTON      "Install Driver",IDC_INSTALLXP,162,66,94,29,BS_MULTILINE | NOT WS_VISIBLE
+    CONTROL         "Install Driver",IDC_INSTALLVISTA,"Button",BS_SPLITBUTTON | BS_MULTILINE | WS_TABSTOP,162,66,94,29
+    PUSHBUTTON      "",IDC_BROWSE,256,66,15,29
+    COMBOBOX        IDC_DEVICELIST,12,15,332,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_DEVICEEDIT,12,15,332,13,NOT WS_VISIBLE | NOT WS_TABSTOP
+    CONTROL         "Edit",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,346,13,25,18
+    GROUPBOX        "",IDC_STATIC,6,32,272,72
+    LTEXT           "Driver",IDC_STATIC_DRIVER,14,46,21,14
+    EDITTEXT        IDC_DRIVER,40,44,98,14,ES_READONLY | NOT WS_TABSTOP
+    LTEXT           "USB ID",IDC_VIDPID,14,65,23,10,SS_NOTIFY
+    EDITTEXT        IDC_VID,40,63,29,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
+    EDITTEXT        IDC_PID,70,63,29,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
+    EDITTEXT        IDC_MI,100,63,17,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
+    PUSHBUTTON      "",IDC_VID_REPORT,118,62,16,15,NOT WS_VISIBLE
+    LTEXT           "WCID",IDC_STATIC_WCID,14,84,21,9,SS_NOTIFY
+    EDITTEXT        IDC_WCID_BOX,40,82,14,14,ES_READONLY | NOT WS_TABSTOP
+    EDITTEXT        IDC_WCID,55,82,44,14,ES_READONLY | NOT WS_VISIBLE | NOT WS_TABSTOP,WS_EX_TRANSPARENT
+    ICON            "",IDC_GRARR_ICON,139,40,24,24,SS_CENTERIMAGE | SS_REALSIZEIMAGE | NOT WS_VISIBLE
+    ICON            "",IDC_ORARR_ICON,139,38,24,26,SS_CENTERIMAGE | SS_REALSIZEIMAGE | NOT WS_VISIBLE
+    LTEXT           "ð",IDC_RARR,142,43,17,15,NOT WS_VISIBLE
+    EDITTEXT        IDC_TARGET,162,44,98,14,ES_READONLY | NOT WS_TABSTOP
+    CONTROL         "",IDC_TARGETSPIN,"msctls_updown32",UDS_ARROWKEYS,260,44,11,14,WS_EX_TRANSPARENT
+    GROUPBOX        "",IDC_STATIC,278,32,97,72
+    CONTROL         106,IDC_THIS_SPACE_FOR_RENT,"Static",SS_BITMAP | SS_CENTERIMAGE,281,43,89,54
+    EDITTEXT        IDC_INFO,12,109,357,162,ES_MULTILINE | ES_READONLY | WS_VSCROLL
+    GROUPBOX        "",IDC_GROUPLOG,6,99,369,199
+    PUSHBUTTON      "Clear Log",IDC_CLEAR,137,276,50,14
+    PUSHBUTTON      "Save Log",IDC_SAVE,192,276,50,14
+    ICON            "",IDC_WCID_ICON,42,83,20,20,SS_NOTIFY | SS_REALSIZEIMAGE
+    CONTROL         "<a>?</a>",IDC_WCID_HELP,"SysLink",WS_TABSTOP,34,81,6,14
 END
 
 IDD_ABOUTBOX DIALOGEX 0, 0, 223, 91
