[zadig] version handling and other improvements
* set future version to 2.0.0
* display zadig version on status bar
* update of version enum for Windows 8
* rename resource.h -> zadig_resource.h
* fix MinGW SS_CENTERIMAGE bug when using ICON

--- a/examples/.msvc/zadig_2010.vcxproj
+++ b/examples/.msvc/zadig_2010.vcxproj
@@ -164,7 +164,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\libwdi\msapi_utf8.h" />
     <ClInclude Include="..\profile.h" />
-    <ClInclude Include="..\resource.h" />
+    <ClInclude Include="..\zadig_resource.h" />
     <ClInclude Include="..\zadig.h" />
   </ItemGroup>
   <ItemGroup>
