--- a/examples/.msvc/zadig_2008.vcproj
+++ b/examples/.msvc/zadig_2008.vcproj
@@ -343,7 +343,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\resource.h"
+				RelativePath="..\zadig_resource.h"
 				>
 			</File>
 			<File
